# collectd-rust-plugin

./: .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Jenkinsfile  README.md  appveyor.yml  build.rs  regenerate-bindings.sh  release.toml  wrapper.h
.github/workflows/: ci.yml
benches/: collectd_bench.rs
ci/: Dockerfile  full.sh  setup.sh  test.sh
collectd_serde/: Cargo.toml
collectd_serde/src/: lib.rs
examples/: env_logger.rs  load.rs  load_with_metadata.rs  myerror.rs  readme.rs  write_graphite.rs  write_log.rs  write_logrs.rs
load-example/: Cargo.toml
load-example/src/: lib.rs
plugins/load/: Cargo.toml
plugins/load/src/: lib.rs
plugins/readme/: Cargo.toml
plugins/readme/src/: lib.rs
plugins/write_graphite/: Cargo.toml
plugins/write_graphite/src/: lib.rs
plugins/write_log/: Cargo.toml
plugins/write_log/src/: lib.rs
readme-example/: Cargo.toml
readme-example/src/: lib.rs
src/: api.rs  bindings-54.rs  bindings-55.rs  bindings-57.rs  bindings.rs  errors.rs  internal.rs  lib.rs  plugins.rs
src/api/: cdtime.rs  logger.rs  mod.rs  oconfig.rs
src/de/: deconfig.rs  errors.rs  level.rs  mod.rs
src/ser/: mod.rs
tests/: compiles.rs  sample.rs
tests/compile-fail/: non-sync.rs  non-sync.stderr
write-example/: Cargo.toml
write-example/src/: lib.rs
