[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "collectd-plugin"
version = "0.9.2-pre"
description = "Provides ergonomic API ontop of collectd's C interface and macro for defining plugins easier"
repository = "https://github.com/nickbabcock/collectd-rust-plugin"
readme = "README.md"
keywords = ["collectd", "plugin"]
categories = ["external-ffi-bindings"]
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg",  "collectd_docs_rs"]
rustdoc-args = ["--cfg",  "collectd_docs_rs"]

[badges]
travis-ci = { repository = "nickbabcock/collectd-rust-plugin" }

[build-dependencies]
regex = "1"
bindgen = { version = "0.49.0", optional = true }

[dependencies]
chrono = "0.4.0"
bitflags = "1.0"
memchr = "2"
log = "0.4"
env_logger = "0.6"
serde = { version = "1", optional = true }
compiletest_rs = { version =  "0.3.14", optional = true }

[dev-dependencies]
serde_derive = "1.0"
serde_test = "1.0"
criterion = "0.2"
log = { version = "0.4", features = ["serde"] }
itertools = "0.8"
num_cpus = "1.0"
failure = "0.1.3"
libc = "0.2"

[features]
stub = []
default = ["serde"]
unstable = ["compiletest_rs"]

[[example]]
name = "myerror"
crate-type = ["cdylib"]

[[example]]
name = "readme"
crate-type = ["cdylib"]

[[example]]
name = "loadrust"
path = "examples/load.rs"
crate-type = ["cdylib"]

[[example]]
name = "write_logrs"
crate-type = ["cdylib"]

[[example]]
name = "write_graphite"
crate-type = ["cdylib"]

[[bench]]
name = "collectd_bench"
harness = false
