[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "collectd-plugin"
version = "0.11.1-pre"
description = "Provides ergonomic API ontop of collectd's C interface and macro for defining plugins easier"
repository = "https://github.com/nickbabcock/collectd-rust-plugin"
readme = "README.md"
keywords = ["collectd", "plugin"]
categories = ["external-ffi-bindings"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
rustc-args = ["--cfg",  "collectd_docs_rs"]
rustdoc-args = ["--cfg",  "collectd_docs_rs"]

[badges]
travis-ci = { repository = "nickbabcock/collectd-rust-plugin" }

[build-dependencies]
regex = "1"
bindgen = { version = "0.53.1", optional = true }

[dependencies]
chrono = "0.4.0"
bitflags = "1.0"
memchr = "2"
log = "0.4"
env_logger = "0.7"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_test = "1.0"
criterion = "0.3"
log = { version = "0.4", features = ["serde"] }
itertools = "0.9"
num_cpus = "1.0"
failure = "0.1.3"
libc = "0.2"
trybuild = "1.0"

[features]
stub = []
default = ["serde"]

[[example]]
name = "myerror"
crate-type = ["cdylib"]

[[example]]
name = "readme"
crate-type = ["cdylib"]

[[example]]
name = "loadrust"
path = "examples/load.rs"
crate-type = ["cdylib"]

[[example]]
name = "write_logrs"
crate-type = ["cdylib"]

[[example]]
name = "write_graphite"
crate-type = ["cdylib"]

[[bench]]
name = "collectd_bench"
harness = false
