[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "load-example"
version = "0.2.0"
publish = false

[dependencies]
failure = "0.1.0"
failure_derive = "0.1.0"
lazy_static = "0.2"

[dependencies.collectd-plugin]
path = ".."
version = "0.2"

[lib]
crate-type = ["dylib"]
name = "myplugin"
