[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "load"
version = "0.2.0"
publish = false

[dependencies]
failure = "0.1.1"
serde_derive = "1"
serde = "1"
num_cpus = "1.0"
libc = "0.2"

[dependencies.collectd-plugin]
path = "../.."
version = "0.2"
features = ["serde"]

[lib]
crate-type = ["cdylib"]
name = "loadrust"

[features]
collectd-54 = ["collectd-plugin/collectd-54"]
collectd-55 = ["collectd-plugin/collectd-55"]
collectd-57 = ["collectd-plugin/collectd-57"]
bindgen = ["collectd-plugin/bindgen"]
default = []
