[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "readme"
version = "0.4.2"
publish = false

[dependencies]
failure = "0.1.1"

[dependencies.collectd-plugin]
path = "../.."
version = "0.4.2"

[lib]
crate-type = ["cdylib"]
name = "readmeplugin"


[features]
collectd-54 = ["collectd-plugin/collectd-54"]
collectd-55 = ["collectd-plugin/collectd-55"]
collectd-57 = ["collectd-plugin/collectd-57"]
bindgen = ["collectd-plugin/bindgen"]
default = []
