[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "readme"
version = "0.4.4"
publish = false

[dependencies]
failure = "0.1.1"

[dependencies.collectd-plugin]
path = "../.."
version = "0.4.4"

[lib]
crate-type = ["cdylib"]
name = "readmeplugin"


[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
