[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "write_graphite"
version = "0.4.4"
publish = false

[dependencies]
failure = "0.1.1"
serde_derive = "1"
serde = "1"

[dependencies.collectd-plugin]
path = "../.."
version = "0.4.4"
features = ["serde"]

[lib]
crate-type = ["cdylib"]
name = "write_graphite_rust"

[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
