[package]
name = "write_log"
version = "0.4.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
publish = false

[dependencies]
failure = "0.1.1"
itertools = "0.7.3"

[dependencies.collectd-plugin]
path = "../.."
version = "0.4.1"

[lib]
crate-type = ["cdylib"]
name = "testwriteplugin"

[features]
collectd-54 = ["collectd-plugin/collectd-54"]
collectd-55 = ["collectd-plugin/collectd-55"]
collectd-57 = ["collectd-plugin/collectd-57"]
bindgen = ["collectd-plugin/bindgen"]
default = []
