[package]
name = "write_log"
version = "0.4.4"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
publish = false

[dependencies]
failure = "0.1.1"
itertools = "0.7"

[dependencies.collectd-plugin]
path = "../.."
version = "0.4.4"

[lib]
crate-type = ["cdylib"]
name = "testwriteplugin"

[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
